--- a/views/include/shop/profile.ejs
+++ b/views/include/shop/profile.ejs
@@ -29,7 +29,11 @@
 <div class="container">
     <div class="row">
         <div class="card col-md-6 col-sm-12 mt-5">
-            <img class="card-img-top" id="thumbnail" src="/images/background.jpg" alt="Card image" style="width:100%">
+            <input class="form-control-file d-none" accept="image/png,.jpg,.jepg" type='file' id="imgInp" onchange="changeThumbnail(this.files)" />
+            <div id="drop-area">
+                <img class="card-img-top" id="thumbnail" src="/images/background.jpg" alt="Card image" style="width:100%">
+                <div class="overlay-text text-light d-none">拖曳至此上傳圖片</div>
+            </div>
             <div class="card-body justify-content-between">
                 <h4 id="name" class="card-title d-inline-block"></h4>
                 <button id="begin" class="btn btn-warning float-right" onclick="location.href='/shop/bussiness'">開始營業</button>
@@ -206,11 +210,49 @@
 <script src="/js/fetch_request/shop/addProduct.js"></script>
 <script src="/js/fetch_request/shop/update.js"></script>
 <script src="/js/fetch_request/shop/locationVerify.js"></script>
+<script src="/js/fetch_request/shop/storeUploadImg.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMbmNNct9nSHK4WRT8CDempAeDJmtbLVE&callback=initMap" async defer></script>
 
 <script>
     var map, geocoder;
     var originData;
+
+    const dropArea = document.getElementById('drop-area');
+
+    ['dragenter', 'dragover', 'dragleave', 'drop'].forEach(eventName => {
+        dropArea.addEventListener(eventName, (e) => {
+            e.preventDefault();
+            e.stopPropagation();
+        }, false)
+    });
+    dropArea.addEventListener('drop', dropTrigger, false);
+
+    function dropTrigger(e) {
+        let dt = e.dataTransfer;
+        let files = dt.files;
+
+        changeThumbnail(files);
+    }
+
+    function changeThumbnail(files) {
+        document.getElementById('imgInp').files = files;
+        const [file] = files;
+        if (file) {
+            document.getElementById('thumbnail').src = URL.createObjectURL(file);
+        }
+    }
+
+    ['dragenter', 'dragover'].forEach(eventName => {
+        dropArea.addEventListener(eventName, (e) => {
+            document.getElementById('thumbnail').classList.add('blur');
+        }, false);
+    });
+
+    ['dragleave', 'drop'].forEach(eventName => {
+        dropArea.addEventListener(eventName, (e) => {
+            document.getElementById('thumbnail').classList.remove('blur');
+        }, false);
+    });
 
     async function initMap() {
         const data = await getInfoFn();
@@ -234,10 +276,12 @@
             edit.classList.add('d-none');
             unedit.classList.remove('d-none');
             submit.classList.remove('d-none');
+            dropArea.querySelector('.overlay-text').classList.remove('d-none');
         } else {
             unedit.classList.add('d-none');
             submit.classList.add('d-none');
             edit.classList.remove('d-none');
+            dropArea.querySelector('.overlay-text').classList.add('d-none');
         }
         const input = document.getElementsByTagName('input');
         const select = document.getElementsByTagName('select');
@@ -337,6 +381,9 @@
     async function submitUpdate(mapInfo) {
         edit(false);
         document.getElementById('loader').classList.add('is-active');
+        const files = document.getElementById('imgInp').files;
+        if (files.length)
+            await storeUploadImg(files[0]);
         const address = document.getElementById('address');
         const place = document.getElementById('place');
         const timeEstimate = document.getElementById('timeEstimate');
@@ -554,9 +601,9 @@
             }
         }
         if (data.result.create_date) document.getElementById('create').value = new Date(data.result.create_date).toLocaleString();
-        if (data.result.last_login) document.getElementById('update').value = new Date(data.result.last_login).toLocaleString();
+        if (data.result.last_login) document.getElementById('update').value = new Date(data.result.last_update).toLocaleString();
         if (data.result.thumbnail)
-            document.getElementById('thumbnail').src = `${data.result.thumbnail}`;
+            document.getElementById('thumbnail').src = `${data.result.thumbnail}?lastmod=${data.result.last_update}`;
         if (data.result.url) await getProductFn(data.result.url);
         return data.result;
     }
